--- a/public/tienda.html
+++ b/public/tienda.html
@@ -1,5 +1,6 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,9 +16,28 @@
             width: 80%;
             margin: auto;
             padding: 2rem;
+            position: relative;
         }
         h1 {
             text-align: center;
+        }
+        .balance {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            border-radius: 25px;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .balance img {
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
         }
         .product {
             display: flex;
@@ -53,6 +73,7 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
         }
         .btn:hover {
             background-color: #0056b3;
@@ -78,36 +99,49 @@
             cursor: pointer;
             font-size: 0.875rem;
         }
+        .added-animation {
+            animation: bounce 0.5s ease-in-out;
+        }
+        @keyframes bounce {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.2); }
+            100% { transform: scale(1); }
+        }
     </style>
 </head>
 <body>
 <div class="container">
+    <div class="balance">
+        <img src="https://img.icons8.com/ios-glyphs/30/ffffff/wallet--v1.png" alt="Cartera">
+        <span>Saldo: $<span id="userBalance">500.00</span></span>
+    </div>
+
     <h1>Tienda</h1>
 
     <!-- Productos -->
     <div class="product">
-        <img src="https://eebe.upc.edu/ca/estudis/informacio-per-a-la-matricula/documents-de-matricula/carnet_upc.jpg/@@images/image-0-5962949125e7cadd2693c97e7677aa0e.jpeg" alt="Producto 1">
+        <img src="https://png.pngtree.com/png-vector/20191115/ourmid/pngtree-blue-flask-of-potion-icon-cartoon-style-png-image_1989088.jpg" alt="Poción">
         <div class="product-info">
-            <h2>Matrícula UPC</h2>
-            <p>Precio: $1000.00</p>
+            <h2>Poción</h2>
+            <p>Precio: $50.00</p>
         </div>
-        <button class="btn" onclick="addToCart('Producto 1', 1000.00)">Agregar al carrito</button>
+        <button class="btn" onclick="addToCart('Poción', 50.00, this)">Agregar al carrito</button>
     </div>
     <div class="product">
-        <img src="https://huerto.eco/images/cat/zanahorias.jpg" alt="Producto 2">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWrqU9XahA9AydltWVM1LJn-YmwLzCdEVfr2JWCv2knReDOczP6FXm2fhke9MMm0h4Y4Q&usqp=CAU" alt="PVida Extra">
         <div class="product-info">
-            <h2>Zanahorias</h2>
-            <p>Precio: $7.50</p>
+            <h2>Vida Extra</h2>
+            <p>Precio: $75.00</p>
         </div>
-        <button class="btn" onclick="addToCart('Producto 2', 7,50)">Agregar al carrito</button>
+        <button class="btn" onclick="addToCart('Power-Up', 75.00, this)">Agregar al carrito</button>
     </div>
     <div class="product">
-        <img src="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/658.png" alt="Producto 3">
+        <img src="https://p.turbosquid.com/ts-thumb/oT/MSL5vf/dN/search/png/1684662476/600x600/fit_q87/e73b30d8dab0148f872f3e9a65c70218ec7f385b/search.jpg" alt="Espada Mágica">
         <div class="product-info">
-            <h2>Greninja</h2>
-            <p>Precio: $15.00</p>
+            <h2>Espada Mágica</h2>
+            <p>Precio: $200.00</p>
         </div>
-        <button class="btn" onclick="addToCart('Producto 3', 15.00)">Agregar al carrito</button>
+        <button class="btn" onclick="addToCart('Espada Mágica', 200.00, this)">Agregar al carrito</button>
     </div>
 
     <!-- Carrito -->
@@ -119,25 +153,32 @@
 </div>
 
 <script>
-    const cart = [];
+    let cart = [];
+    let userBalance = 500.00;
 
-    function addToCart(productName, productPrice) {
+    function addToCart(productName, productPrice, buttonElement) {
+        if (userBalance < productPrice) {
+            alert('No tienes suficiente saldo para comprar este artículo.');
+            return;
+        }
+
         const productIndex = cart.findIndex(item => item.name === productName);
         if (productIndex === -1) {
             cart.push({ name: productName, price: productPrice, quantity: 1 });
         } else {
             cart[productIndex].quantity++;
         }
+
+        userBalance -= productPrice;
+        animateButton(buttonElement);
         updateCart();
     }
 
     function removeFromCart(productName) {
         const productIndex = cart.findIndex(item => item.name === productName);
         if (productIndex !== -1) {
-            cart[productIndex].quantity--;
-            if (cart[productIndex].quantity === 0) {
-                cart.splice(productIndex, 1);
-            }
+            userBalance += cart[productIndex].price * cart[productIndex].quantity;
+            cart.splice(productIndex, 1);
         }
         updateCart();
     }
@@ -145,9 +186,11 @@
     function updateCart() {
         const cartItems = document.getElementById('cartItems');
         const cartTotal = document.getElementById('cartTotal');
-        cartItems.innerHTML = '';
+        const userBalanceElement = document.getElementById('userBalance');
 
+        cartItems.innerHTML = '';
         let total = 0;
+
         cart.forEach(item => {
             total += item.price * item.quantity;
 
@@ -161,6 +204,14 @@
         });
 
         cartTotal.textContent = total.toFixed(2);
+        userBalanceElement.textContent = userBalance.toFixed(2);
+    }
+
+    function animateButton(button) {
+        button.classList.add('added-animation');
+        setTimeout(() => {
+            button.classList.remove('added-animation');
+        }, 500);
     }
 </script>
 </body>
